test/expected/explain_type_i.out
explain type int x
        ^
9: error: "type": unknown name
